--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
 </script>
 
 <!-- polyfills -->
+<script src="../node_modules/es5-shim/es5-shim.js"></script>
 <script src="../node_modules/requirejs/require.js"></script>
 
 <!-- main -->
