require.conf.js shared between app and test

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
 <!-- polyfills -->
 <script src="../node_modules/requirejs/require.js"></script>
+<script src="require.conf.js"></script>
 
 <!-- main -->
 <script src="main.js"></script>
