--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
 <!-- polyfills -->
 <script src="../node_modules/es5-shim/es5-shim.js"></script>
 <script src="../node_modules/requirejs/require.js"></script>
+<script src="../src/require.conf.js"></script>
 
 <!-- main -->
 <script src="main.js"></script>
