test in puppeteer

--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
 <script src="../node_modules/mocha/mocha.js"></script>
 <script>
     mocha.ui('bdd');
-    mocha.reporter('html');
+    mocha.reporter('spec');
 </script>
 
 <!-- polyfills -->
