--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
 <script src="require.conf.js"></script>
 
 <!-- main -->
-<script src="main.js"></script>
+<script src="main.mjs" type="module"></script>
 </body>
 </html>
