--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 <div id="wui"></div>
 
 <!-- main -->
-<script src="main.mjs" type="module"></script>
+<script src="main.js" type="module"></script>
 </body>
 </html>
