--- a/test/index.html
+++ b/test/index.html
@@ -25,7 +25,7 @@
 </script>
 
 <!-- main -->
-<script src="main.mjs" type="module"></script>
+<script src="main.js" type="module"></script>
 
 </body>
 </html>
