--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,7 @@
 
 <div id="wui"></div>
 
-<!-- polyfills -->
-<script src="../node_modules/requirejs/require.js"></script>
-<script src="require.conf.js"></script>
-
 <!-- main -->
-<script src="main.js"></script>
+<script src="main.js" type="module"></script>
 </body>
 </html>
